feat: add bidding metadata, audit timestamps, and dynamic filter support